--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "pg": "^8.7.1",
+    "slugify": "^1.6.0",
     "supertest": "^6.1.6"
   },
   "devDependencies": {},
